# Edit-Mouse

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: index.html  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
