[package]
name = "edit-mouse"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-autostart = "2.0.0"
hidapi = "2.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24.0"
core-foundation = "0.10.1"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
